--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,17 +1,12 @@
 .App {
-  text-align: left;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.App-Header {
+  background-color: grey;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.App-Header-Text {
+  text-align: center;
 }
 
 .App-title {
