--- a/django-react-web/home/templates/home/upload.html
+++ b/django-react-web/home/templates/home/upload.html
@@ -8,8 +8,12 @@
   <body>
     <form action="/upload/" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form }}
+        {{ form.file }}
+        {{ form.token.as_hidden }}
         <input type="submit" value="Submit">
     </form>
+    <script>
+      document.getElementById('id_token').value = localStorage.getItem('access')
+    </script>
   </body>
 </html>
