--- a/django-react-web/home/templates/home/upload.html
+++ b/django-react-web/home/templates/home/upload.html
@@ -8,7 +8,12 @@
   <body>
     <form action="/upload/" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
+        {{ message }}<br />
         {{ form.file }}
+        {{ form.mode.label }}: 
+        {{ form.mode }}
+        {{ form.source.label }}: 
+        {{ form.source }}
         {{ form.token.as_hidden }}
         <input type="submit" value="Submit">
     </form>
