--- a/forum-web/styles/MyInvision/template/overall_footer.html
+++ b/forum-web/styles/MyInvision/template/overall_footer.html
@@ -11,36 +11,13 @@
 
 	<div class="copyright">
 		<!-- EVENT overall_footer_copyright_prepend -->
-		<strong><span>*</span>Original Author: <a href="http://www.bradleyv.com/">Brad Veryard</a></strong>
+		{CREDIT_LINE}
+		<br><strong><span>*</span>Original Author: <a href="http://www.bradleyv.com/">Brad Veryard</a></strong>
 		<br><strong><span>*</span>Updated to 3.2 by <a href="https://twitter.com/MannixMD">MannixMD</a></strong>
-		<p class="footer-row">
-			<span class="footer-copyright">{{ CREDIT_LINE }}</span>
-		</p>
-		<!-- IF TRANSLATION_INFO -->
-		<p class="footer-row">
-			<span class="footer-copyright">{{ TRANSLATION_INFO }}</span>
-		</p>
-		<!-- ENDIF -->
+		<!-- IF TRANSLATION_INFO --><br />{TRANSLATION_INFO}<!-- ENDIF -->
 		<!-- EVENT overall_footer_copyright_append -->
-		<p class="footer-row">
-			<a class="footer-link" href="{{ U_PRIVACY }}" title="{{ lang('PRIVACY_LINK') }}" role="menuitem">
-				<span class="footer-link-text">{{ lang('PRIVACY_LINK') }}</span>
-			</a>
-			|
-			<a class="footer-link" href="{{ U_TERMS_USE }}" title="{{ lang('TERMS_LINK') }}" role="menuitem">
-				<span class="footer-link-text">{{ lang('TERMS_LINK') }}</span>
-			</a>
-		</p>
-		<!-- IF DEBUG_OUTPUT -->
-		<p class="footer-row">
-			<span class="footer-info">{{ DEBUG_OUTPUT }}</span>
-		</p>
-		<!-- ENDIF -->
-		<!-- IF U_ACP -->
-		<p class="footer-row">
-			<a class="footer-link text-strong" href="{{ U_ACP }}">{{ lang('ACP') }}</a>
-		</p>
-		<!-- ENDIF -->
+		<!-- IF DEBUG_OUTPUT --><br />{DEBUG_OUTPUT}<!-- ENDIF -->
+		<!-- IF U_ACP --><br /><strong><a href="{U_ACP}">{L_ACP}</a></strong><!-- ENDIF -->
 	</div>
 
 	<div id="darkenwrapper" class="darkenwrapper" data-ajax-error-title="{L_AJAX_ERROR_TITLE}" data-ajax-error-text="{L_AJAX_ERROR_TEXT}" data-ajax-error-text-abort="{L_AJAX_ERROR_TEXT_ABORT}" data-ajax-error-text-timeout="{L_AJAX_ERROR_TEXT_TIMEOUT}" data-ajax-error-text-parsererror="{L_AJAX_ERROR_TEXT_PARSERERROR}">
@@ -90,7 +67,6 @@
 <!-- IF S_COOKIE_NOTICE -->
 	<script src="{T_ASSETS_PATH}/cookieconsent/cookieconsent.min.js?assets_version={T_ASSETS_VERSION}"></script>
 	<script>
-		if (typeof window.cookieconsent === "object") {
 		window.addEventListener("load", function(){
 			window.cookieconsent.initialise({
 				"palette": {
@@ -106,11 +82,9 @@
 					"message": "{LA_COOKIE_CONSENT_MSG}",
 					"dismiss": "{LA_COOKIE_CONSENT_OK}",
 					"link": "{LA_COOKIE_CONSENT_INFO}",
-						"href": "{UA_PRIVACY}"
-					}
-				});
-			});
+					"href": "{LA_COOKIE_CONSENT_HREF}"
 				}
+			})});
 	</script>
 <!-- ENDIF -->
 
