--- a/forum-web/styles/MyInvision/theme/responsive.css
+++ b/forum-web/styles/MyInvision/theme/responsive.css
@@ -139,7 +139,7 @@
 		border-radius: 0;
 		margin: 0;
 		min-width: 290px;
-		padding: 0;
+		padding: 0 5px;
 	}
 
 	/* Common block wrappers
@@ -399,7 +399,6 @@
 		display: block;
 		margin-bottom: 5px;
 		white-space: normal;
-		margin-left: 35px;
 	}
 
 	fieldset.quick-login label > span {
